// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(6,22,33,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(6,22,33,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-4 {
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid #E7EEEC;
}

.emotion-5 * {
  border: 0!important;
  min-height: unset!important;
  padding: 0!important;
}

.emotion-6 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 5%;
}

.emotion-6 * {
  font-size: 14px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
}

.emotion-8 {
  padding-right: 4px;
  color: #3D4F58;
}

.emotion-9 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 10%;
}

.emotion-9 * {
  font-size: 14px;
}

.emotion-12 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 15%;
}

.emotion-12 * {
  font-size: 14px;
}

.emotion-15 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 20%;
}

.emotion-15 * {
  font-size: 14px;
}

.emotion-18 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 30%;
}

.emotion-18 * {
  font-size: 14px;
}

.emotion-24 {
  --lg-min-cell-height: 40px;
  border-top: 1px solid var(--lg-table-row-border-color);
  --lg-table-row-border-color: #E7EEEC;
  color: #3D4F58;
}

.emotion-24>td>[data-leafygreen-ui="td-inner-div"] {
  min-height: var(--lg-min-cell-height);
  max-height: unset;
}

.emotion-24>td:nth-child(1) {
  padding-left: 8px;
}

.emotion-24 td:nth-child(1)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 td:nth-child(2)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 td:nth-child(3)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 td:nth-child(4)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 td:nth-child(5)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 td:nth-child(6)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-25 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-25 * {
  font-size: 14px!important;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-25>div>span>* {
  margin: 0 0 12px;
}

.emotion-25>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4"
      >
        <thead>
          <tr
            class="emotion-5"
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-6"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-9"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-12"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-15"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-18"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-15"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-24"
            role="row"
          >
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  notebook
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(6,22,33,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(6,22,33,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-4 {
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid #E7EEEC;
}

.emotion-5 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
}

.emotion-5 * {
  font-size: 14px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
}

.emotion-7 {
  padding-right: 4px;
  color: #3D4F58;
}

.emotion-23 {
  --lg-min-cell-height: 40px;
  border-top: 1px solid var(--lg-table-row-border-color);
  --lg-table-row-border-color: #E7EEEC;
  color: #3D4F58;
}

.emotion-23>td>[data-leafygreen-ui="td-inner-div"] {
  min-height: var(--lg-min-cell-height);
  max-height: unset;
}

.emotion-23>td:nth-child(1) {
  padding-left: 8px;
}

.emotion-23 td:nth-child(1)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 td:nth-child(2)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 td:nth-child(3)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 td:nth-child(4)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 td:nth-child(5)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 td:nth-child(6)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  font-weight: bold;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  background-color: #F9FBFA;
}

.emotion-24 * {
  font-size: 14px!important;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-24>div>span>* {
  margin: 0 0 12px;
}

.emotion-24>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-26 * {
  font-size: 14px!important;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-26>div>span>* {
  margin: 0 0 12px;
}

.emotion-26>div>span>*:last-child {
  margin-bottom: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4"
      >
        <thead>
          <tr
            class=""
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  name
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  quantity
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  size
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  status
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  tags
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  rating
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  journal
                </span>
              </div>
            </th>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  25
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  14x21,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  brown, lined
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  9
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  notebook
                </span>
              </div>
            </th>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  paper
                </span>
              </div>
            </th>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  100
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  watercolor
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  planner
                </span>
              </div>
            </th>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  75
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  22.85x30,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  2019
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  postcard
                </span>
              </div>
            </th>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  45
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10x,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  double-sided,white
                </span>
              </div>
            </td>
            <td
              class="emotion-26"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  2
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
